Correão e Melhoria
Correção do erro "error obtaining VCS status: exit status 128"
Adição da rota de Login na documentação.
